feat(ui): add interactive terminal interface for wallet management
Introduces a new visual terminal UI with navigation for dashboard, balance, transfer info, and account management using a terminal UI library. Adds live and mock data modes for quick stats and balances, enhancing user experience with easy keyboard navigation and real-time updates.

Includes new dependencies for terminal UI rendering and updates configuration for type support. This enables a more intuitive and accessible wallet interaction directly in the terminal.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@hiveio/dhive": "^1.2.7",
     "@oclif/core": "^4.0.26",
     "@oclif/plugin-help": "^6.2.16",
+    "@types/blessed": "^0.1.25",
     "@types/react": "^19.1.9",
+    "blessed": "^0.1.81",
     "boxen": "^7.1.1",
     "chalk": "^4.1.2",
     "crypto-js": "^4.2.0",
