--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "inquirer": "^12.1.0",
     "keytar": "^7.9.0",
     "nanospinner": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "ora": "^8.1.1",
     "react": "^19.1.1"
   },
